--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
         "react-moment": "^1.1.3",
         "tailwindcss": "3.3.2",
         "typescript": "5.0.4"
+    },
+    "devDependencies": {
+        "eslint-config-prettier": "^8.8.0",
+        "prettier": "^2.8.8",
+        "prettier-plugin-tailwindcss": "^0.2.8"
     }
 }
